<resources>
    <string name="app_name">Darts Quiz</string>
    <string name="_1_who_is_the_best_darts_player_ever">1. Who is the best darts player ever?</string>
    <string name="michael_van_gerwen">Michael van Gerwen</string>
    <string name="peter_wright">Peter Wright</string>
    <string name="phil_taylor">Phil Taylor</string>
    <string name="_2_phil_taylor_is_known_as_who">2. Phil Taylor is known as who?</string>
    <string name="nickname">nickname</string>
    <string name="_3_which_of_the_listed_players_are_professionals_pdc">3. Which of the listed players are professionals? (PDC)</string>
    <string name="scott_mitchell">Scott Mitchell</string>
    <string name="gary_anderson">Gary Anderson</string>
    <string name="mark_mcgeeney">Mark McGeeney</string>
    <string name="_4_how_many_darts_can_a_player_throw_per_turn">4. How many darts can a player throw per turn?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_9">9</string>
    <string name="_5_what_is_the_lowest_number_than_cannot_be_scored_with_one_dart">5. What is the lowest number than CANNOT be scored with one dart?</string>
    <string name="_21">21</string>
    <string name="_31">31</string>
    <string name="_29">29</string>
    <string name="_23">23</string>
    <string name="hello">Hello</string>
    <string name="submit">Submit</string>
    <string name="_hi">"Hi "</string>
    <string name="answer_please">Please answer the following questions:</string>
    <string name="please_enter_your_name">Please enter your name!</string>
    <string name="name">name</string>
    <string name="start_the_quiz">Start The Quiz</string>
    <string name="enter_your_name_please">Enter your name please!</string>
    <string name="your_name">your name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="excellent">Excellent!\nYou are a darts expert.\n\nCorrect answers: </string>
    <string name="well_done">Well done!\nSo close to the ultimate goal.\n\nCorrect answers: </string>
    <string name="not_bad">Not bad.\nBut you can do more.\n\nCorrect answers: </string>
    <string name="from">/5</string>
    <string name="tray_again">/5 Try again!!! :)</string>
    <string name="answer_to_all_please">Answer to all questions please!</string>
    <string name="enter_name_please">Enter your name please!</string>
</resources>
