<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bg.berov.dartsquiz.DartsQuiz">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="bg.berov.dartsquiz.DartsQuiz">

        <TextView
            android:id="@+id/textView_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/hello"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@android:color/holo_orange_light"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_who_is_the_best_darts_player_ever"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#eeeeee"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <RadioGroup
                android:id="@+id/radio_group_first_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/michael_van_gerwen" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/peter_wright" />

                <RadioButton
                    android:id="@+id/radioButtonFirstQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phil_taylor" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gary_anderson" />
            </RadioGroup>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@android:color/holo_orange_light"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_phil_taylor_is_known_as_who"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#eeeeee"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <EditText
                android:id="@+id/editText_second_qwestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nickname"
                android:inputType="textPersonName" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            app:cardBackgroundColor="@android:color/holo_orange_light"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_which_of_the_listed_players_are_professionals_pdc"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#eeeeee"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phil_taylor" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scott_mitchell" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gary_anderson" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_mcgeeney" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@android:color/holo_orange_light"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_how_many_darts_can_a_player_throw_per_turn"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#eeeeee"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <RadioGroup
                android:id="@+id/radio_group_fourth_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1" />

                <RadioButton
                    android:id="@+id/radioButton42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_2" />

                <RadioButton
                    android:id="@+id/radioButtonFourthQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_3" />

                <RadioButton
                    android:id="@+id/radioButton44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_9" />
            </RadioGroup>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@android:color/holo_orange_light"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_what_is_the_lowest_number_than_cannot_be_scored_with_one_dart"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="#eeeeee"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp">

            <RadioGroup
                android:id="@+id/radio_group_fifth_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_21" />

                <RadioButton
                    android:id="@+id/radioButton52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_31" />

                <RadioButton
                    android:id="@+id/radioButton53"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_29" />

                <RadioButton
                    android:id="@+id/radioButtonFifthQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_23" />
            </RadioGroup>


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
